src/test/ui/closures/2229_closure_analysis/migrations/precise.stderr
error: drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/precise.rs:27:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |     };
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/precise.rs:1:9
   |
LL | #![deny(disjoint_capture_drop_reorder)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: drop(&(t));

error: drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/precise.rs:40:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |         let _t = &t.1;
LL | |     };
   | |_____^
   |
   = note: drop(&(t));

error: drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/precise.rs:63:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _x = u.0.0;
LL | |         let _x = u.0.1;
LL | |         let _x = u.1.0;
LL | |     };
   | |_____^
   |
   = note: drop(&(u));

error: aborting due to 3 previous errors

